atividade-4/4-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-confmap-svc
  namespace: labconfmap
spec:
  selector:
    app: confmap-nginx
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30006
  type: NodePort
