atividade-4/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-confmap-ingress
  namespace: labconfmap
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
        - backend:
            service:
              name: nginx-confmap-svc
              port:
                number: 80
          path: /
          pathType: Prefix
